# ethgame

./: Cargo.toml  README.md  _tmp  fucker  log
.cargo/: config.toml
game/: Cargo.toml
game/src/: env.rs  main.rs
interpreter/src/: gas.rs  host.rs  inner_models.rs  instruction_result.rs  instructions.rs  interpreter.rs
interpreter/src/host/: dummy_host.rs
interpreter/src/instructions/: host.rs  system.rs
interpreter/src/interpreter/: analysis.rs  contract.rs
primitives/src/: env.rs  result.rs
revm/: Cargo.toml
revm/src/: evm.rs  evm_impl.rs  journaled_state.rs  lib.rs  result.rs
src/: main.rs
tmp/: SillyBank.abi
